--- a/src/app/layout/pages/home/home.component.css
+++ b/src/app/layout/pages/home/home.component.css
@@ -45,13 +45,13 @@ div {
   
   .cart-badge {
     position: absolute;
-    top: -5px;
-    right: -10px;
+    top: 0;
+    right: 0;
     background-color: red;
     color: white;
     border-radius: 50%;
-    padding: 2px 6px;
-    font-size: 15px;
+    padding: 2px 5px;
+    font-size: 12px;
     font-weight: bold;
     line-height: 1;
   }
