--- a/src/app/layout/shared/item-modal/item-modal.component.html
+++ b/src/app/layout/shared/item-modal/item-modal.component.html
@@ -10,7 +10,7 @@
       <p>Price: {{ menuItem.price | currency }}</p>
 
       <div class="quantity-control">
-        <button (click)="changeQuantity(false)">-</button>
+        <button (click)="changeQuantity(false)" [disabled]="menuItem.quantity <= 1">-</button>
         <span>{{ menuItem.quantity || 1 }}</span>
         <button (click)="changeQuantity(true)">+</button>
       </div>
