register form validations

--- a/src/app/layout/pages/register/register.component.html
+++ b/src/app/layout/pages/register/register.component.html
@@ -6,7 +6,7 @@
       <label for="first_name">First Name</label>
       <input id="first_name" type="text" class="form-control" formControlName="first_name"
         placeholder="Enter your first name" required />
-      <div *ngIf="registerForm.get('first_name')?.invalid && registerForm.get('first_name')?.touched" class="error">
+      <div *ngIf="registerForm.get('first_name')?.invalid && submitted" class="error">
         <small *ngIf="registerForm.get('first_name')?.hasError('required')">First Name is required.</small>
       </div>
     </div>
@@ -16,7 +16,7 @@
       <label for="last_name">Last Name</label>
       <input id="last_name" type="text" class="form-control" formControlName="last_name"
         placeholder="Enter your last name" required />
-      <div *ngIf="registerForm.get('last_name')?.invalid && registerForm.get('last_name')?.touched" class="error">
+      <div *ngIf="registerForm.get('last_name')?.invalid && submitted" class="error">
         <small *ngIf="registerForm.get('last_name')?.hasError('required')">Last Name is required.</small>
       </div>
     </div>
@@ -48,7 +48,7 @@
             {{ item ? item.code : '' }}
           </ng-template>
         </ng-select>
-        <div *ngIf="registerForm.get('country_code')?.invalid && registerForm.get('country_code')?.touched" class="error">
+        <div *ngIf="registerForm.get('country_code')?.invalid && submitted" class="error">
           <small *ngIf="registerForm.get('country_code')?.hasError('required')">Country Code is required.</small>
         </div>
       </div>
@@ -58,7 +58,7 @@
         <label for="contact_number">Contact Number</label>
         <input id="contact_number" type="text" class="form-control" formControlName="contact_number"
           placeholder="Enter your contact number" required />
-        <div *ngIf="registerForm.get('contact_number')?.invalid && registerForm.get('contact_number')?.touched"
+        <div *ngIf="registerForm.get('contact_number')?.invalid && submitted"
           class="error">
           <small *ngIf="registerForm.get('contact_number')?.hasError('required')">Contact Number is required.</small>
           <small *ngIf="registerForm.get('contact_number')?.hasError('pattern')">Contact Number should be valid.</small>
@@ -71,7 +71,7 @@
       <label for="email">Email</label>
       <input id="email" type="email" class="form-control" formControlName="email" placeholder="Enter your email"
         required />
-      <div *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched" class="error">
+      <div *ngIf="registerForm.get('email')?.invalid && submitted" class="error">
         <small *ngIf="registerForm.get('email')?.hasError('required')">Email is required.</small>
         <small *ngIf="registerForm.get('email')?.hasError('strictEmail')">Invalid Email format.</small>
       </div>
@@ -82,7 +82,7 @@
       <label for="password">Password</label>
       <input id="password" type="password" class="form-control" formControlName="password"
         placeholder="Enter your password" required />
-      <div *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched" class="error">
+      <div *ngIf="registerForm.get('password')?.invalid && submitted" class="error">
         <small *ngIf="registerForm.get('password')?.hasError('required')">Password is required.</small>
         <small *ngIf="registerForm.get('password')?.hasError('minlength')">Password must be at least 6 characters
           long.</small>
