--- a/src/app/layout/pages/home/home.component.css
+++ b/src/app/layout/pages/home/home.component.css
@@ -6,6 +6,14 @@
   padding: 20px; /* Optional: Adjust padding for spacing */
 }
 
+.menu-container {
+  padding: 0;
+  margin-top: 0; /* Ensure no top margin */
+  width: 100%; /* Make sure it spans full width */
+  left: 0; /* Align it to the left edge of the screen */
+  right: 0; /* Align it to the right edge of the screen */
+}
+
 
 div {
     padding: 20px;
@@ -24,7 +32,7 @@ div {
     position: absolute;
     top: 100px;
     right: 15px;
-    z-index: 1000;
+    z-index: 1002;
   }
   
   
@@ -40,7 +48,7 @@ div {
     position: absolute;
     top: 100px;
     right: 15px;
-    z-index: 1000;
+    z-index: 1002;
   }
   
   .cart-badge {
