--- a/src/app/layout/login/login/login.component.html
+++ b/src/app/layout/login/login/login.component.html
@@ -1,62 +1,80 @@
 <div class="container">
-    <div class="wrapper">
-      <form [formGroup]="loginForm" (ngSubmit)="onLogin()" >
-        <h1>Login</h1>
-  
-        <div class="input-box">
-          <input
-            type="email"
-            id="username"
-            placeholder="Username"
-            formControlName="username"
-            required
-            [ngClass]="{
-              'is-invalid': submitted && loginForm.get('username')?.invalid,
-              'is-valid': submitted && loginForm.get('username')?.valid
-            }"
-            
-          />
-          <i class='bx bxs-user'></i>
-          <div *ngIf="submitted && loginForm.get('username')?.invalid">
-            <small *ngIf="loginForm.get('username')?.errors?.['required']">Username is required.</small>
-            <small *ngIf="loginForm.get('username')?.errors?.['strictEmail']">Enter a valid email address.</small>
-          </div>
-        </div>
-  
-        <div class="input-box">
-          <input
-            type="password"
-            id="password"
-            placeholder="Password"
-            formControlName="password"
-            required
-            [ngClass]="{
-              'is-invalid': submitted && loginForm.get('password')?.invalid,
-              'is-valid': submitted && loginForm.get('password')?.valid
-            }"
-          />
-          <i class='bx bxs-lock-alt'></i>
-          <div *ngIf="submitted && loginForm.get('password')?.invalid">
-            <small *ngIf="loginForm.get('password')?.errors?.['required']">Password is required.</small>
-            <small *ngIf="loginForm.get('password')?.errors?.['minlength']">
-              Password must be at least 6 characters.
-            </small>
-          </div>
-        </div>
+  <div class="wrapper">
+    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+      <h1>Login</h1>
 
-        <p *ngIf="loginError" class="error">{{ loginError }}</p>
-  
-        <button type="submit" class="btn" >Login</button>
-  
-        <div class="register-link">
-          <a href="#">Forget password?</a>
+      <div class="input-box">
+        <input type="email" id="username" placeholder="Username" formControlName="username" required [ngClass]="{
+            'is-invalid': submitted && loginForm.get('username')?.invalid,
+            'is-valid': submitted && loginForm.get('username')?.valid
+          }" />
+        <i class='bx bxs-user'></i>
+        <div *ngIf="submitted && loginForm.get('username')?.invalid">
+          <small *ngIf="loginForm.get('username')?.errors?.['required']">Username is required.</small>
+          <small *ngIf="loginForm.get('username')?.errors?.['strictEmail']">Enter a valid email address.</small>
         </div>
-  
-        <div class="register-link">
-          <p>Don't have an account? <a routerLink="/register">Register</a></p>
+      </div>
+
+      <div class="input-box">
+        <input type="password" id="password" placeholder="Password" formControlName="password" required [ngClass]="{
+            'is-invalid': submitted && loginForm.get('password')?.invalid,
+            'is-valid': submitted && loginForm.get('password')?.valid
+          }" />
+        <i class='bx bxs-lock-alt'></i>
+        <div *ngIf="submitted && loginForm.get('password')?.invalid">
+          <small *ngIf="loginForm.get('password')?.errors?.['required']">Password is required.</small>
+          <small *ngIf="loginForm.get('password')?.errors?.['minlength']">
+            Password must be at least 6 characters.
+          </small>
         </div>
-      </form>
-  
-    </div>
+      </div>
+
+      <p *ngIf="loginError" class="error">{{ loginError }}</p>
+
+      <!--<button type="submit" class="btn" [disabled]="isSpinnerActive">Login</button>-->
+
+      <!--<button type="submit" class="btn" [disabled]="submitted && loginForm.invalid">
+        <span *ngIf="!isSpinnerActive">Login</span>
+        <span *ngIf="isSpinnerActive">Loading...</span>
+      </button>-->
+
+      <!--<button type="submit" class="btn" [disabled]="isSpinnerActive">
+        <span *ngIf="!isSpinnerActive">Login</span>
+        <div *ngIf="isSpinnerActive" style="position: absolute; display: inline-block;">
+          <ngx-spinner
+            bdColor="transparent"
+            size="small"
+            color="#000000"
+            type="ball-clip-rotate"
+            [fullScreen]="false"
+          ></ngx-spinner>
+        </div>
+      </button>-->
+
+
+      <div>
+        <!-- Login button -->
+        <button *ngIf="!isSpinnerActive" type="submit" class="btn btn-primary">
+          Login
+        </button>
+      
+        <!-- Loading button with Bootstrap spinner -->
+        <button *ngIf="isSpinnerActive" type="button" style="color: rgb(0, 0, 0);" class="btn btn-primary d-flex align-items-center justify-content-center" [disabled]="true">
+          <i class="bi bi-arrow-repeat spin me-2"></i> <!-- Bootstrap spinner icon -->
+        </button>
+      </div>
+      
+
+
+
+      <div class="register-link">
+        <a href="#">Forget password?</a>
+      </div>
+
+      <div class="register-link">
+        <p>Don't have an account? <a routerLink="/register">Register</a></p>
+      </div>
+    </form>
+
   </div>
-  
+</div>
